2006-04-25  Per Abrahamsen  <abraham@dina.kvl.dk>

	* bioclimate_std.C (WaterDistribution): Removed "node 0 is top"
	assumption. 
	* column_std.C (tick): Ditto.
	* soil_chemicals.C (mixture): Ditto.
	* surface.C (albedo): Ditto.

	* select_content.C (output_array): Removed 1D assumptions.
	* select_interval.C: Ditto.

2006-04-24  Per Abrahamsen  <abraham@dina.kvl.dk>

	* adadsorption.h, adsadsorption.C, adsorption_full.C (full): New
	virtual member function with default implementation.

	* bioincorporation.C: Removed 1D assumption.

	* lib/chemistry.dai (solid): Removed transport.

	* organic_matter.C (mix): Reset tillage age based on z, not zplus.
	(top_summary, initialize): Removed 1D assumptions.

	* organic_matter.C (active): New function.
	(active_size): Removed.
	* column_std.C (tick): Update caller.
	* denitrification.C (tick) Change argument.
	(initialize): New function.
	* column_std.C (initialize): Update caller.
	* om.C (initialize): New function.
	(grow): Removed.
	* all: Updated callers.

2006-04-23  Per Abrahamsen  <abraham@dina.kvl.dk>

	* soil.C, soil.h (MaxRootingHeight): Renamed from 'MaxRootingDepth'

2006-04-22  Per Abrahamsen  <abraham@dina.kvl.dk>

	* element.h, element.C: Extracted from 'dom.C'.
	* Makefile (SUBMODELS): Added.

2006-04-21  Per Abrahamsen  <abraham@dina.kvl.dk>

	* soltrans1d.C, soltrans1d.h: New submodel.
	* Makefile (SUBMODELS): Added it.
	* column_base.C: Use it.
	* column_base.C, column_base.h (tick_base_soil_chemicals): New
	function. 
	* column_std.C, column_inorganic.C: Update derived.
	* solute.C: Remove transport.

	* all: Changed 'Geometry::size' to 'Geometry::node_size'.

	* select_flux.h, select_flux.C: New interface.
	* Makefile (SPECIALS): Add it.
	* select_flux_top.C, select_flux_bottom.C: Use it.
	
2006-04-20  Per Abrahamsen  <abraham@dina.kvl.dk>

	* geometry1d.h, geometry1d.C, geometry.h (fraction_in_z_interval)
	(edge_cross_z): New virtual member functions.
